# flash-kmeans

./: .gitignore  README.md  pyproject.toml  results.jsonl  setup.py  setup.sh
examples/: bench_heavy_assign.py  bench_heavy_lloyd.py  benchmark_flash_kmeans.py  benchmark_gpu_scaling.py  benchmark_large.py  benchmark_overlap.py  fastkmeans.patch  fastkmeans_patch.py  mlxtest.py  run_benchmark_grid.sh  test_assign_dtype_d.py  test_assign_nonpow2_d.py  test_compile.py  test_cutedsl_assign.py  testapi.py
flash_kmeans/: __init__.py  _cutedsl_assign_kernel.py  assign_euclid_triton.py  centroid_update_triton.py  cutedsl_impl.py  interface.py  kmeans_large.py  kmeans_triton_impl.py  torch_fallback.py
kmeans/: assign_euclid_triton.py  centroid_update_triton.py  kmeans_triton_impl.py
scripts/: bench_eff_gain.py  bench_eff_gain_heavy.py  tune_cutedsl_h200.py  tune_euclid_h200.py
scripts/tune_results/: eff_heavy_new.json  eff_heavy_old.json  eff_new.json  eff_old.json  tune_cutedsl_g4.json  tune_cutedsl_g5.json  tune_cutedsl_g6.json  tune_cutedsl_g7.json  tune_cutedsl_h200.json  tune_largeD_g4.json  tune_largeD_g5.json  tune_largeD_g6.json  tune_largeD_g7.json  tune_largeD_h200.json  tune_smallD_g4.json  tune_smallD_g5.json  tune_smallD_g6.json  tune_smallD_g7.json  tune_smallD_h200.json
